--- a/DataUploader/packages.config
+++ b/DataUploader/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net48" />
   <package id="Npgsql" version="6.0.6" targetFramework="net48" />
+  <package id="Ookii.Dialogs.Wpf" version="5.0.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net48" />
